# RDTool

./: .gitignore  CHANGELOG.md  LICENSE  PKGBUILD  README.md  cliff.toml  package-lock.json  package.json  push1.sh
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/packaging/: rdtool.desktop
src-tauri/src/: auth.rs  commands.rs  db.rs  lib.rs  main.rs  settings.rs  webdav.rs
src-tauri/src/api/: client.rs  downloader.rs  mod.rs  streaming.rs  torrents.rs  user.rs
src-tauri/src/downloads/: engine.rs  mod.rs  queue.rs  scheduler.rs
src-tauri/src/ui/: app.rs  blur.rs  mod.rs  theme.rs
src/components/: Layout.tsx  UpdateBanner.tsx
src/components/ui/: badge.tsx  button.tsx  progress.tsx  textarea.tsx
src/pages/: DashboardPage.tsx  DownloaderPage.tsx  DownloadsPage.tsx  LoginPage.tsx  SettingsPage.tsx  StreamingPage.tsx  TorrentsPage.tsx
