[package]
name = "rdtool"
version = "0.1.0"
description = "RDTool - Real-Debrid GUI Client"
authors = ["techxero"]
edition = "2021"

[lib]
name = "rdtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
aes-gcm = "0.10"
blake3 = "1"
machine-uid = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
getrandom = { version = "0.2", features = ["std"] }
dirs = "5"
