[package]
name = "rdtool"
version = "0.1.8"
description = "RDTool - Real-Debrid GUI Client"
authors = ["techxero"]
edition = "2021"

[[bin]]
name = "rdtool"
path = "src/main.rs"

[lib]
name = "rdtool_lib"
crate-type = ["rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
egui-phosphor = "0.12"
rfd = "0.15"  # latest resolved: 0.15.4
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
aes-gcm = "0.10"
blake3 = "1"
machine-uid = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
getrandom = { version = "0.2", features = ["std"] }
dirs = "5"
dark-light = "1"
raw-window-handle = "0.6"
tray-icon = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = { version = "3" }

[package.metadata.packager]
name = "RDTool"
identifier = "com.techxero.rdtool"
description = "Real-Debrid GUI Client"
homepage = "https://github.com/DarkXero-dev/RDTool"
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.ico", "icons/icon.icns"]
out-dir = "target/release/bundle"
