[package]
name = "rdtool"
version = "0.1.21"
description = "RDTool - Real-Debrid GUI Client"
authors = ["techxero"]
license = "MIT"
edition = "2021"

[[bin]]
name = "rdtool"
path = "src/main.rs"

[lib]
name = "rdtool_lib"
crate-type = ["rlib"]

[dependencies]
eframe = { version = "0.34", default-features = false, features = ["glow", "default_fonts", "accesskit", "x11", "wayland"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
egui-phosphor = "0.12"
rfd = "0.15"  # latest resolved: 0.15.4
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
aes-gcm = "0.10"
blake3 = "1"
machine-uid = "0.5"
rusqlite = { version = "0.31" }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
getrandom = { version = "0.2", features = ["std"] }
dirs = "5"
dark-light = "1"
raw-window-handle = "0.6"
tray-icon = "0.19"

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3", default-features = false, features = ["wayland-data-control"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = { version = "3" }
# Linux has system SQLite; Windows/macOS do not, so bundle it there
rusqlite = { version = "0.31", features = ["bundled"] }

[package.metadata.packager]
name = "RDTool"
identifier = "com.techxero.rdtool"
description = "Real-Debrid GUI Client"
homepage = "https://github.com/DarkXero-dev/RDTool"
icons = ["icons/32x32.png", "icons/128x128.png", "icons/128x128@2x.png", "icons/icon.ico", "icons/icon.icns"]
out-dir = "target/release/bundle"

[package.metadata.packager.deb]
desktop-template = "packaging/rdtool.desktop"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rdtool", dest = "/usr/bin/rdtool", mode = "0755" },
    { source = "icons/icon.png", dest = "/usr/share/pixmaps/rdtool.png", mode = "0644" },
    { source = "icons/128x128.png", dest = "/usr/share/icons/hicolor/128x128/apps/rdtool.png", mode = "0644" },
    { source = "packaging/rdtool.desktop", dest = "/usr/share/applications/rdtool.desktop", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
gtk3 = "*"
openssl-libs = "*"
